# SAME-installer-website

./: .gitignore  README.md  app.py  index.html  install_script.sh  pyproject.toml  requirements.txt
.azure/: config
